@@ -1,3 +1,8 @@
+2008-10-01  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatarsay (avatar_command):
+	allow "size", "height" and "width" with no parameters
+
 2008-09-30  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatarsay (handle_audio_command):
